[package]
name = "ubass-rs"
version = "0.0.1"
edition = "2024"

[lib]
name = "ubass"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"
unwrap_used = { level = "deny", priority = -1 }

[features]
default = ["fec_xor", "rust-api"]
fec_xor = []
fec_rs = []
rust-api = []
uniffi-api = []

[dependencies]
thiserror = "2"
ubass_macros = { path = "ubass_macros" }
uniffi = { version = "0.31.0", features = ["cli"] }
aes-gcm-siv = "0.11.1"
reed-solomon-simd = "3.1.0"
tokio = { version = "1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "macros",
] }
derive_more = { version = "2.1.1", features = ["full"] }
async-trait = "0.1.89"
x25519-dalek = "2.0.1"
rand_core = "0.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rand = "0.10.0"
rustc-hash = "2.1.2"
socket2 = "0.6.3"
tracing = "0.1.44"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
