[package]
name = "ubass-rs"
version = "0.0.1"
edition = "2024"

[lib]
name = "ubass"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"
unwrap_used = { level = "deny", priority = -1 }

[features]
default = ["rust-api"]
rust-api = []
uniffi-api = []
# Receiver-only wrapper around the core API used to drive offline
# data-collection sweeps. Off by default — production builds shouldn't
# pull in the wrapper code path.
data-collection-api = []

[dependencies]
ubass_macros = { path = "ubass_macros" }
thiserror = "2"
aes-gcm-siv = "0.11.1"
reed-solomon-simd = "3.1.0"
tokio = { version = "1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "macros",
] }
derive_more = { version = "2.1.1", features = ["full"] }
async-trait = "0.1.89"
x25519-dalek = "2.0.1"
rand_core = "0.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
siphasher = "1.0.1"
rand = "0.10.0"
rustc-hash = "2.1.2"
tracing = "0.1.44"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
