[package]
name = "integration"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = "0.3.23"
ubass-rs = { path = "../." }

[lints.clippy]
pedantic = "warn"
